add private profile + fix available/unavailable + fix borrow

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.example.enjoybook">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <!-- Permessi per la fotocamera -->
@@ -37,6 +38,7 @@
 
             </intent-filter>
         </activity>
+
 
     </application>
 </manifest>
